--- a/src/vmm-details.glade
+++ b/src/vmm-details.glade
@@ -3515,17 +3515,6 @@ I/O:</property>
                                                     <property name="column_spacing">8</property>
                                                     <property name="row_spacing">3</property>
                                                     <child>
-                                                      <widget class="GtkLabel" id="label123">
-                                                        <property name="visible">True</property>
-                                                        <property name="xalign">1</property>
-                                                        <property name="label" translatable="yes">Cac_he mode:</property>
-                                                        <property name="use_underline">True</property>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="x_options">GTK_FILL</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
                                                       <widget class="GtkLabel" id="label30">
                                                         <property name="visible">True</property>
                                                         <property name="xalign">1</property>
@@ -3534,39 +3523,9 @@ I/O:</property>
                                                         <property name="mnemonic_widget">disk-format</property>
                                                       </widget>
                                                       <packing>
-                                                        <property name="top_attach">3</property>
-                                                        <property name="bottom_attach">4</property>
+                                                        <property name="top_attach">2</property>
+                                                        <property name="bottom_attach">3</property>
                                                         <property name="x_options">GTK_FILL</property>
-                                                      </packing>
-                                                    </child>
-                                                    <child>
-                                                      <widget class="GtkHBox" id="hbox15">
-                                                        <property name="visible">True</property>
-                                                        <child>
-                                                          <widget class="GtkComboBox" id="disk-cache-combo">
-                                                            <property name="visible">True</property>
-                                                            <signal name="changed" handler="on_disk_cache_combo_changed"/>
-                                                          </widget>
-                                                          <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="position">0</property>
-                                                          </packing>
-                                                        </child>
-                                                        <child>
-                                                          <widget class="GtkLabel" id="disk-cache-label">
-                                                            <property name="visible">True</property>
-                                                            <property name="xalign">0</property>
-                                                            <property name="label">Unknown cache</property>
-                                                          </widget>
-                                                          <packing>
-                                                            <property name="expand">False</property>
-                                                            <property name="position">1</property>
-                                                          </packing>
-                                                        </child>
-                                                      </widget>
-                                                      <packing>
-                                                        <property name="left_attach">1</property>
-                                                        <property name="right_attach">2</property>
                                                       </packing>
                                                     </child>
                                                     <child>
@@ -3597,8 +3556,8 @@ I/O:</property>
                                                       <packing>
                                                         <property name="left_attach">1</property>
                                                         <property name="right_attach">2</property>
-                                                        <property name="top_attach">3</property>
-                                                        <property name="bottom_attach">4</property>
+                                                        <property name="top_attach">2</property>
+                                                        <property name="bottom_attach">3</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3611,8 +3570,6 @@ I/O:</property>
                                                         <property name="mnemonic_widget">disk-bus-combo</property>
                                                       </widget>
                                                       <packing>
-                                                        <property name="top_attach">1</property>
-                                                        <property name="bottom_attach">2</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3648,8 +3605,6 @@ I/O:</property>
                                                       <packing>
                                                         <property name="left_attach">1</property>
                                                         <property name="right_attach">2</property>
-                                                        <property name="top_attach">1</property>
-                                                        <property name="bottom_attach">2</property>
                                                       </packing>
                                                     </child>
                                                     <child>
@@ -3660,8 +3615,8 @@ I/O:</property>
                                                         <property name="use_underline">True</property>
                                                       </widget>
                                                       <packing>
-                                                        <property name="top_attach">2</property>
-                                                        <property name="bottom_attach">3</property>
+                                                        <property name="top_attach">1</property>
+                                                        <property name="bottom_attach">2</property>
                                                         <property name="x_options">GTK_FILL</property>
                                                       </packing>
                                                     </child>
@@ -3696,8 +3651,125 @@ I/O:</property>
                                                       <packing>
                                                         <property name="left_attach">1</property>
                                                         <property name="right_attach">2</property>
-                                                        <property name="top_attach">2</property>
-                                                        <property name="bottom_attach">3</property>
+                                                        <property name="top_attach">1</property>
+                                                        <property name="bottom_attach">2</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkExpander" id="expander8">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <child>
+                                                          <widget class="GtkTable" id="table19">
+                                                            <property name="visible">True</property>
+                                                            <property name="n_rows">2</property>
+                                                            <property name="n_columns">2</property>
+                                                            <property name="column_spacing">8</property>
+                                                            <property name="row_spacing">3</property>
+                                                            <child>
+                                                            <widget class="GtkLabel" id="label123">
+                                                            <property name="visible">True</property>
+                                                            <property name="xalign">1</property>
+                                                            <property name="label" translatable="yes">Cac_he mode:</property>
+                                                            <property name="use_underline">True</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkHBox" id="hbox15">
+                                                            <property name="visible">True</property>
+                                                            <child>
+                                                            <widget class="GtkComboBox" id="disk-cache-combo">
+                                                            <property name="visible">True</property>
+                                                            <signal name="changed" handler="on_disk_cache_combo_changed"/>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkLabel" id="disk-cache-label">
+                                                            <property name="visible">True</property>
+                                                            <property name="xalign">0</property>
+                                                            <property name="label">Unknown cache</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">1</property>
+                                                            </packing>
+                                                            </child>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkLabel" id="label79">
+                                                            <property name="visible">True</property>
+                                                            <property name="xalign">1</property>
+                                                            <property name="label" translatable="yes">_IO mode:</property>
+                                                            <property name="use_underline">True</property>
+                                                            <property name="mnemonic_widget">disk-io-combo</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="top_attach">1</property>
+                                                            <property name="bottom_attach">2</property>
+                                                            <property name="x_options">GTK_FILL</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkHBox" id="hbox24">
+                                                            <property name="visible">True</property>
+                                                            <child>
+                                                            <widget class="GtkComboBox" id="disk-io-combo">
+                                                            <property name="visible">True</property>
+                                                            <signal name="changed" handler="on_disk_io_combo_changed"/>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                            </packing>
+                                                            </child>
+                                                            <child>
+                                                            <widget class="GtkLabel" id="disk-io-label">
+                                                            <property name="visible">True</property>
+                                                            <property name="xalign">0</property>
+                                                            <property name="label">Unknown IO</property>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="position">1</property>
+                                                            </packing>
+                                                            </child>
+                                                            </widget>
+                                                            <packing>
+                                                            <property name="left_attach">1</property>
+                                                            <property name="right_attach">2</property>
+                                                            <property name="top_attach">1</property>
+                                                            <property name="bottom_attach">2</property>
+                                                            </packing>
+                                                            </child>
+                                                          </widget>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="label78">
+                                                            <property name="visible">True</property>
+                                                            <property name="label" translatable="yes">_Performance options</property>
+                                                            <property name="use_underline">True</property>
+                                                            <property name="mnemonic_widget">expander8</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="type">label_item</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="right_attach">2</property>
+                                                        <property name="top_attach">3</property>
+                                                        <property name="bottom_attach">4</property>
                                                       </packing>
                                                     </child>
                                                   </widget>
